# Theme-Song-Discord-Bot

./: .env.example  .gitignore  Dockerfile  Procfile  RAILWAY.md  README.md  app.py  cookies.txt  docker-compose.yml  nixpacks.toml  pyproject.toml  redirect_on_visit.py  requirements.txt  start.sh
