[tool.poetry]
name = "repl_python3_Discord-Theme-Song-Bot"
version = "0.1.0"
description = "Discord theme song bot"
authors = ["Adamo Orsini <adamo.orsini01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.1"
youtube_dl = "^2021.6.6"
replit = "^3.2.4"
PyNaCl = "^1.4.0"
Flask = "^2.0.2"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
